@@ -1112,7 +1112,7 @@ delete_glob(
     if (dir) {
 	sdir = merge_path(mount_point, disk_path);
 	result = cd_glob(dir, 0);
-	amfree(dir);
+	g_free(dir);
     }
     if (result) {
 	regex = glob_to_regex(newglob);
@@ -1121,7 +1121,7 @@ delete_glob(
 	    g_printf(_("\"%s\" is not a valid shell wildcard pattern: "),
 		     newglob);
 	    puts(s);
-} else {
+    } else {
             /*
              * glob_to_regex() anchors the beginning of the pattern with ^,
              * but we will be tacking it onto the end of the current directory
@@ -1129,20 +1129,19 @@ delete_glob(
              * $, but we need to match an optional trailing /, so tack that on
              * the end.
              */
-            regex_path = g_strdup(regex + 1);
-            regex_path[strlen(regex_path) - 1] = '\0';
-            strappend(regex_path, "[/]*$");
+            regex[strlen(regex) - 1] = '\0';
+            regex_path = g_strconcat(regex + 1, "/?$", NULL);
             delete_file(uqglob, regex_path);
-            amfree(regex_path);
+            g_free(regex_path);
 	}
 	if (sdir) {
 	    set_directory(sdir, 0);
 	}
-	amfree(regex);
+	g_free(regex);
     }
-    amfree(sdir);
-    amfree(uqglob);
-    amfree(newglob);
+    g_free(sdir);
+    g_free(uqglob);
+    g_free(newglob);
 }
 
 void
